# 3DPDFConverter

./: .gitignore  3d_pdf_task.md  CMakeLists.txt  CMakelists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
doc/: README_CN.md  README_JP.md  README_KO.md  README_RU.md
resource/: version.rc.in
resource/i18n/: language_en.ts  language_ja.ts  language_zh.ts
src/CLI/: CMakeLists.txt  main.cpp
src/CoreTypes/: CMakeLists.txt  CoreTypes.h  Export.h  ExportTypes.h  README.md  test_coretypes.cpp
src/ExportFacade/: CMakeLists.txt  ExportFacade.cpp  ExportFacade.h  ExportFacade_global.h
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/GUI/core_api/: CadProcessor.cpp
src/GUI/ui/: Occt3DView.cpp  PdfExportDialog.cpp  PdfExportDialog.h  PdfExportDialog.ui
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h  Logger_global.h  test_logger.cpp
src/MeshGenerator/: CMakeLists.txt  MeshGenerator.cpp  MeshGenerator.h  MeshGenerator_global.h
src/PdfExporter/: CMakeLists.txt  PdfExporter.cpp  PdfExporter.h  PdfExporter_global.h
src/PrcExporter/: CMakeLists.txt  PrcExporter.cpp  PrcExporter.h  PrcExporter_global.h
src/StepReader/: CMakeLists.txt  StepReader.cpp  StepReader.h  StepReader_global.h
tests/: CMakeLists.txt
